--- a/src/ClientApp/src/custom.css
+++ b/src/ClientApp/src/custom.css
@@ -13,12 +13,12 @@ a {
 }
 
 body {
-  background-color: rgba(226, 193, 208, 0.457);
+  background-color: #dee5e8;
 }
 
 header {
-  background: rgb(238,174,202);
-  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  background: rgb(231,228,215);
+background: radial-gradient(circle, rgba(231,228,215,1) 0%, rgba(203,214,219,1) 100%);
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -33,3 +33,39 @@ code {
   color: #FEE9B2;
 }
 
+
+/* Add this CSS to your stylesheet */
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
